<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">applib4</string>
    <string name="login_and_register" tools:ignore="MissingTranslation">登录/注册</string>
    <string name="area" tools:ignore="MissingTranslation">国家/地区</string>
    <string name="china_mother_land" tools:ignore="MissingTranslation">中国内地</string>
    <string name="china_area_phone" tools:ignore="MissingTranslation">+86</string>
    <string name="input_phone_num" tools:ignore="MissingTranslation">请输入手机号</string>
    <string name="verification_code" tools:ignore="MissingTranslation">验证码</string>
    <string name="input_verification_code" tools:ignore="MissingTranslation">请输入验证码</string>
    <string name="send_verification_code" tools:ignore="MissingTranslation">发送验证码</string>
    <string name="login" tools:ignore="MissingTranslation">登录</string>
    <string name="phone_num_login" tools:ignore="MissingTranslation">手机号密码登录</string>
    <string name="phone_tips" tools:ignore="MissingTranslation">请输入手机号</string>
    <string name="phone_code_tips" tools:ignore="MissingTranslation">请输入验证码</string>
    <string name="credit_time" tools:ignore="MissingTranslation">%ds</string>
    <string name="minutiues" tools:ignore="MissingTranslation">60s</string>
    <string name="setting_psw" tools:ignore="MissingTranslation">设置登录密码</string>
    <string name="login_psw" tools:ignore="MissingTranslation">登录密码</string>
    <string name="ensure_psw" tools:ignore="MissingTranslation">确认密码</string>
    <string name="complete" tools:ignore="MissingTranslation">完成</string>
    <string name="psw_conbine" tools:ignore="MissingTranslation">6-20位组合密码</string>
    <string name="ensure_psw_again" tools:ignore="MissingTranslation">请再次确认</string>
    <string name="login_tips1" tools:ignore="MissingTranslation">登录即表示阅读并同意</string>
    <string name="login_tips2" tools:ignore="MissingTranslation">服务协议</string>
    <string name="login_tips3" tools:ignore="MissingTranslation">和</string>
    <string name="login_tips4" tools:ignore="MissingTranslation">隐私政策</string>
    <string name="country_disct" tools:ignore="MissingTranslation">国家/地区</string>
    <string name="cancle" tools:ignore="MissingTranslation">取消</string>
    <string name="country_disct_tips" tools:ignore="MissingTranslation">请输入国家/国际地区名</string>
    <string name="input_psw_tips" tools:ignore="MissingTranslation">请输入密码</string>
    <string name="compare_psw_again" tools:ignore="MissingTranslation">两次输入密码不一致，请再次输入</string>
    <string name="input_mix_count" tools:ignore="MissingTranslation">最小输入6位字符</string>
    <string name="register_tips" tools:ignore="ExtraTranslation,MissingTranslation">注册成功,是否立即开户?</string>
    <string name="go_to_main" tools:ignore="MissingTranslation">进入首页</string>
    <string name="complete_info" tools:ignore="MissingTranslation">立即开户</string>
    <string name="password" tools:ignore="MissingTranslation">密码</string>
    <string name="login_register_tips" tools:ignore="MissingTranslation">验证码登录注册</string>
    <string name="forget_psw" tools:ignore="MissingTranslation">忘记密码</string>
    <string name="attention" tools:ignore="MissingTranslation">通知</string>
    <string name="error_input_times" tools:ignore="MissingTranslation">密码输入有误，您还有%d次机会</string>
    <string name="error_psw_input_times" tools:ignore="MissingTranslation">密码错误超10次，请明天再试</string>
    <string name="ensure" tools:ignore="MissingTranslation">确定</string>
    <string name="vrf_code_time" tools:ignore="MissingTranslation">验证码已超过10次\n 请明天再试</string>
    <string name="commit" tools:ignore="MissingTranslation">提交</string>
    <string name="phone_code_vrf_login" tools:ignore="MissingTranslation">短信验证码登录</string>
    <string name="rest_psw" tools:ignore="MissingTranslation">重置密码</string>
    <string name="new_psw" tools:ignore="MissingTranslation">新密码</string>
    <string name="ensure_rest" tools:ignore="MissingTranslation">确认重置</string>
    <string name="input_new_pws" tools:ignore="MissingTranslation">请输入新密码</string>
    <string name="input_new_pws_mix" tools:ignore="MissingTranslation">*请输入至少6位密码</string>
    <string name="compare_no_match" tools:ignore="MissingTranslation">*两次密码输入不一致</string>
    <string name="new_psw_no_match" tools:ignore="MissingTranslation">*大、小写字母,数字或符号至少含有2种</string>
    <string name="loading" tools:ignore="MissingTranslation">正在加载</string>
    <string name="system_message">消息提醒</string>
    <string name="my" tools:ignore="MissingTranslation">我的</string>
    <string name="login_register" tools:ignore="MissingTranslation">登录/注册</string>
    <string name="speed_open_account" tools:ignore="MissingTranslation">极速开户</string>
    <string name="stock_model" tools:ignore="MissingTranslation">模拟炒股</string>
    <string name="change_color" tools:ignore="MissingTranslation">涨跌颜色</string>
    <string name="setting_language" tools:ignore="MissingTranslation">设置语言</string>
    <string name="account_safe" tools:ignore="MissingTranslation">账户安全</string>
    <string name="my_manager" tools:ignore="MissingTranslation">我的专属顾问</string>
    <string name="help_center" tools:ignore="MissingTranslation">帮助中心</string>
    <string name="about_zr" tools:ignore="MissingTranslation">关于卓锐</string>
    <string name="login_out" tools:ignore="MissingTranslation">退出登录</string>
    <string name="change_color_tips_cn" tools:ignore="MissingTranslation">红涨绿跌</string>
    <string name="change_color_tips_en" tools:ignore="MissingTranslation">绿涨红跌</string>
    <string name="auto" tools:ignore="MissingTranslation">自动</string>
    <string name="about_question" tools:ignore="MissingTranslation">开户相关问题</string>
    <string name="openaccount_by_license" tools:ignore="MissingTranslation">哪些证件可以用来开户？</string>
    <string name="openaccount_by_info" tools:ignore="MissingTranslation">如何更新卓锐证券资料？</string>
    <string name="openaccount_by_time" tools:ignore="MissingTranslation">账户开通需要多长时间？</string>
    <string name="openaccount_by_age" tools:ignore="MissingTranslation">开通账户是否年龄限制？</string>
    <string name="take_photo_not_permission" tools:ignore="MissingTranslation">获取相机权限失败，将导致无法正常拍摄，请打开设置页面手动授权</string>
    <string name="record_video_not_permission" tools:ignore="MissingTranslation">
        获取相机、麦克风、存储空间权限失败，将导致无法正常拍摄，请打开设置页面手动授权
    </string>
    <string name="go_to_setting" tools:ignore="MissingTranslation">去设置</string>
    <string name="member_of_china" tools:ignore="MissingTranslation">中国居民:</string>
    <string name="member_of_china_tips" tools:ignore="MissingTranslation">1、中国内地身份证\n2、内地临时身份证（三个月有效期内）</string>
    <string name="member_of_hk" tools:ignore="MissingTranslation">香港居民:</string>
    <string name="member_of_hk_tips" tools:ignore="MissingTranslation">1、香港永久居民身份证+地址证明（三个月内发出）\n
        2、香港居民身份证+香港签证身份书+地址证明（三个 月内发出）\n 3、香港居民身份证+中国内地身份证+地址证明（三个 月内发出）
    </string>
    <string name="member_of_marcao" tools:ignore="MissingTranslation">澳门居民:</string>
    <string name="member_of_marcao_tips" tools:ignore="MissingTranslation">
        1、澳门永久居民身份证+地址证明（三个月内发出）\n2、澳门非永久居民身份证+澳门旅行证+地址证明（三 个月内发出）\n 3、澳门非永久居民身份证+中国内地身份证+地址证明 (三个月内发出）
    </string>
    <string name="member_of_other" tools:ignore="MissingTranslation">非中国内地、香港、澳门居民：</string>
    <string name="member_of_other_tips" tools:ignore="MissingTranslation">1、护照（非中国内地护照）+地址证明（三个月内发出）</string>
    <string name="update_zhuori_info" tools:ignore="MissingTranslation">如需更改，请联系卓锐证券客服（中国内地：400-
        \n820-4578；中国香港：+852-2541-8546）。如 \n您的姓名、国籍、证件号码、居民地址等信息有变更 \n、需提供相关材料。
    </string>
    <string name="how_long_to_openaccount" tools:ignore="MissingTranslation">您好，账户完全开通一般需要1-2个工作日。从
        \n注册到考通的各个阶段，均会有相应进度的短信提 \n示。
    </string>
    <string name="age_range_tips" tools:ignore="MissingTranslation">
        您好，年满18周岁至21周岁的客户，可以开立即现\n金账户；年龄21周岁以上的客户，可开立保证金账\n户。（暂时没有年龄高上限的的要求）
    </string>
    <string name="resolved" tools:ignore="MissingTranslation">已解决</string>
    <string name="unresolved" tools:ignore="MissingTranslation">未解决</string>
    <string name="red_up_green_down" tools:ignore="MissingTranslation">红涨绿跌</string>
    <string name="green_up_red_down" tools:ignore="MissingTranslation">绿涨红跌</string>
    <string name="simple_cn" tools:ignore="MissingTranslation">简体中文</string>
    <string name="unsimple_cn" tools:ignore="MissingTranslation">繁体中文</string>
    <string name="english" tools:ignore="MissingTranslation">English</string>
    <string name="phone_num" tools:ignore="MissingTranslation">手机号</string>
    <string name="fix_login_pass" tools:ignore="MissingTranslation">修改登录密码</string>
    <string name="fix_pay_pass" tools:ignore="MissingTranslation">修改交易密码</string>
    <string name="phone_num_verify" tools:ignore="MissingTranslation">手机号验证</string>
    <string name="phone_tips_hide" tools:ignore="MissingTranslation">您当前的手机号为</string>
    <string name="hide_phone_tips" tools:ignore="MissingTranslation">请输入您收到的验证码</string>
    <string name="get_verify_code" tools:ignore="MissingTranslation">获取验证码</string>
    <string name="next" tools:ignore="MissingTranslation">下一步</string>
    <string name="repaire_phone" tools:ignore="MissingTranslation">修改手机号</string>
    <string name="input_new_phone_code" tools:ignore="MissingTranslation">请输入新手机号码</string>
    <string name="compelte" tools:ignore="MissingTranslation">完成</string>
    <string name="verify_code_length" tools:ignore="MissingTranslation">验证码长度不正确</string>
    <string name="login_ahead" tools:ignore="MissingTranslation">请先登录</string>
    <string name="same_phone_num" tools:ignore="MissingTranslation">修改的手机号不能与原来的相同</string>
    <string name="old_pass_word" tools:ignore="MissingTranslation">原密码</string>
    <string name="new_pass_word" tools:ignore="MissingTranslation">新密码</string>
    <string name="en_sure_new_pass_word" tools:ignore="MissingTranslation">确认新密码</string>
    <string name="input_old_pass_word" tools:ignore="MissingTranslation">请输入您的原密码</string>
    <string name="input_new_pass_word" tools:ignore="MissingTranslation">请输入您的新密码</string>
    <string name="input_ensur_new_pass_word" tools:ignore="MissingTranslation">请再次输入您的新密码</string>
    <string name="pass_word_type_tips" tools:ignore="MissingTranslation">密码必须包含字母（大写或小写）、数字或符号至少两种</string>
    <string name="old_trade_pass_word" tools:ignore="MissingTranslation">原交易密码</string>
    <string name="input_old_trade_pass_tips" tools:ignore="MissingTranslation">请输入您的原交易密码</string>
    <string name="forget_trade_pass" tools:ignore="MissingTranslation">忘记交易密码</string>
    <string name="open_account_license_num" tools:ignore="MissingTranslation">开户证件号</string>
    <string name="input_account_license_num" tools:ignore="MissingTranslation">请输入您开户时登记的证件号码</string>
    <string name="input_receiver_code" tools:ignore="MissingTranslation">请输入您收到的验证码</string>
    <string name="please_ensure_password" tools:ignore="MissingTranslation">请确认密码</string>
    <string name="no_null_old_pass" tools:ignore="MissingTranslation">原密码不正确</string>
    <string name="please_input_ensure_capital_psw" tools:ignore="MissingTranslation">请输入确认交易密码内容</string>
    <string name="input_new_ca_psw" tools:ignore="MissingTranslation">请输入您的新交易密码</string>
    <string name="input_en_ca_psw" tools:ignore="MissingTranslation">请确认您的新交易密码</string>
    <string name="en_sure_new_ca_psw" tools:ignore="MissingTranslation">确认新密码</string>
    <string name="input_en_ca_psw_no_match" tools:ignore="MissingTranslation">两次输入的交易码不一致</string>
    <string name="zr_user" tools:ignore="MissingTranslation">卓锐用户</string>
    <string name="intro_pro" tools:ignore="MissingTranslation">产品介绍</string>
    <string name="zr" tools:ignore="MissingTranslation">卓锐证券</string>
    <string name="about_version" tools:ignore="MissingTranslation">版本说明</string>
    <string name="about_law" tools:ignore="MissingTranslation">法律条款</string>
    <string name="about_zr_this" tools:ignore="MissingTranslation">产品说明</string>
</resources>