<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="com.zhuorui.securities.personal.ui.viewmodel.ChangeTradePassViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/color_f0f0f0"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
     <com.zhuorui.commonwidget.ZhuoRuiTopBar
             android:id="@+id/top_bar"
             app:layout_constraintTop_toTopOf="parent"
             app:zr_topbarTitle="@string/fix_pay_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

     </com.zhuorui.commonwidget.ZhuoRuiTopBar>
        <androidx.appcompat.widget.LinearLayoutCompat
                app:layout_constraintTop_toBottomOf="@+id/top_bar"
                android:layout_width="match_parent"
                android:id="@+id/rl_new_pass"
                android:gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_height="45dp"
                android:background="@color/color_FFFFFFFF">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_new_psw_tips"
                      android:textStyle="bold"
                      android:textSize="15sp"
                      android:layout_marginLeft="13dp"
                      android:textColor="@color/color_282828"
                      android:text="@string/new_pass_word"/>
            <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:textSize="13sp"
                    android:id="@+id/et_new_capital_psw"
                    android:background="@color/color_FFFFFFFF"
                    android:textColor="@color/color_8DB9E4"
                    android:layout_toRightOf="@+id/tv_new_psw_tips"
                    android:textColorHint="@color/color_A1A1A1"
                    android:hint="@string/input_new_pass_word"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
                app:layout_constraintTop_toBottomOf="@+id/rl_new_pass"
                android:layout_width="match_parent"
                android:id="@+id/rl_ensure_new_pass"
                android:gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_height="45dp"
                android:background="@color/color_FFFFFFFF">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tv_ensure_new_pass_tips"
                      android:textStyle="bold"
                      android:textSize="15sp"
                      android:layout_marginLeft="13dp"
                      android:textColor="@color/color_282828"
                      android:text="@string/en_sure_new_pass_word"/>
            <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:textSize="13sp"
                    android:id="@+id/et_ensure_new_capital_psw"
                    android:background="@color/color_FFFFFFFF"
                    android:textColor="@color/color_8DB9E4"
                    android:layout_toRightOf="@+id/tv_ensure_new_pass_tips"
                    android:textColorHint="@color/color_A1A1A1"
                    android:hint="@string/input_ensur_new_pass_word"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.zhuorui.commonwidget.StateButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/color_FFFFFFFF"
                app:normalBackgroundColor="@color/color_1A6ED2"
                app:unableBackgroundColor="@color/color_8DB9E4"
                android:text="@string/complete"
                android:gravity="center"
                android:enabled="false"
                app:radius="3dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="95dp"
                app:layout_constraintTop_toBottomOf="@+id/rl_ensure_new_pass"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="29dp"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_btn_complete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>